Bug 1296967 - Fix -Wunused-result warning in widget/cocoa/nsCocoaWindow.mm. r=spohl